feat: add observability stack and required payment idempotency